src/objects/Apttus_Config2__LineItem__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__RollupPriceMethod__c</fullName>
        <description>The rollup price method.Only applicable to Option line types.</description>
        <inlineHelpText>The rollup price method.Only applicable to Option line types.</inlineHelpText>
        <label>Rollup Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupPriceToBundle__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the option price is rolled up to the bundle. Only applicable to Option line types. This field is deprecated. Use the Price Included in Bundle field instead.</description>
        <label>Rollup Price To Bundle (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SellingFrequency__c</fullName>
        <description>The selling frequency associated with the recurring or usage price</description>
        <label>Selling Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SellingTerm__c</fullName>
        <description>The selling term associated with the product or service</description>
        <label>Selling Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SellingUom__c</fullName>
        <description>The selling unit of measure for the product</description>
        <inlineHelpText>The selling unit of measure for the product</inlineHelpText>
        <label>Selling Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ServiceLocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated service location</description>
        <inlineHelpText>ID of the associated service location</inlineHelpText>
        <label>Service Location</label>
        <referenceTo>Apttus_Config2__ServiceLocation__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account</description>
        <inlineHelpText>ID of the ship to account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (Ship To)</relationshipLabel>
        <relationshipName>LineItemsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartDate__c</fullName>
        <description>The start date for products and services</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StatusDetails__c</fullName>
        <description>Maintains information about what is pending</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Maintains information about what is pending</inlineHelpText>
        <label>Status Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SummaryGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the summary group associated with the item</description>
        <label>Summary Group</label>
        <referenceTo>Apttus_Config2__SummaryGroup__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SyncStatus__c</fullName>
        <description>The line synchronization status.</description>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Synchronized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the tax code associated with the line item. Only applicable for taxable items.</description>
        <inlineHelpText>ID of the tax code associated with the line item. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Code</label>
        <referenceTo>Apttus_Config2__TaxCode__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxInclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price is tax inclusive. Only applicable for taxable items.</description>
        <inlineHelpText>Indicates whether the price is tax inclusive. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Inclusive ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line item is taxable</description>
        <inlineHelpText>Indicates whether the line item is taxable</inlineHelpText>
        <label>Taxable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Term__c</fullName>
        <description>The pricing term associated with the product or service</description>
        <label>Pricing Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TotalQuantity__c</fullName>
        <description>The total quantity is Quantity + Asset Quantity</description>
        <inlineHelpText>The total quantity is Quantity + Asset Quantity</inlineHelpText>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TransferPriceLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Line Item from collaborators cart from which transfer prices was received for this line item</description>
        <inlineHelpText>Line Item from collaborators cart from which transfer prices was received for this line item</inlineHelpText>
        <label>Transfer Price Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Line Items (Transfer Price Line Item)</relationshipLabel>
        <relationshipName>LineItemsTP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UnitCostAdjustment__c</fullName>
        <description>The unit adjustment for the product or service applied to the base cost</description>
        <inlineHelpText>The unit adjustment for the product or service applied to the base cost</inlineHelpText>
        <label>Unit Cost Adjustment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UnitPriceAdjustmentAuto__c</fullName>
        <description>The automatic unit adjustment for the product or service applied to the base price</description>
        <inlineHelpText>The automatic unit adjustment for the product or service applied to the base price</inlineHelpText>
        <label>Unit Price Adjustment (Auto)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UnitPriceAdjustmentManual__c</fullName>
        <description>The manual unit adjustment for the product or service applied to the base price</description>
        <inlineHelpText>The manual unit adjustment for the product or service applied to the base price</inlineHelpText>
        <label>Unit Price Adjustment (Manual)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Uom__c</fullName>
        <description>The product or service unit of measure</description>
        <label>Product Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bundle_Q__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundle Q</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Activity_Type__c</fullName>
        <description>Used in Surround CPQ/QTC output templates</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>&apos;Used in Surround CPQ/QTC output templates</inlineHelpText>
        <label>Activity Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Agreement_Contract_Price__c</fullName>
        <description>Holds the applicable contract price from the agreement</description>
        <inlineHelpText>Holds the applicable contract price from the agreement</inlineHelpText>
        <label>Agreement Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Agreement_Name__c</fullName>
        <description>Reference to the agreement name from PLI</description>
        <formula>IF(
   Apttus_Config2__OptionId__c != null, 
   IF(TEXT(Apttus_Config2__ProductId__r.CPQ_Secondary_Category__c) = &apos;Solution Model&apos;, &apos;&apos;, Apttus_Config2__PriceListItemId__r.CPQ_Agreement_Name__c),
   Apttus_Config2__PriceListItemId__r.CPQ_Agreement_Name__c
)</formula>
        <inlineHelpText>Reference to the agreement name from PLI</inlineHelpText>
        <label>Agreement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Agreement_Number__c</fullName>
        <description>Reference to the Agreement Number on pricelist item</description>
        <formula>Apttus_Config2__PriceListItemId__r.CPQ_Agreement_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to the Agreement Number on pricelist item</inlineHelpText>
        <label>Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Applied_Discounts_Info__c</fullName>
        <description>To store the QLD discount amount applied against the discount entry</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Applied Discounts Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_ApprovalRequired__c</fullName>
        <description>Make Approval Required True for QTC Portfolio</description>
        <formula>AND(Portfolio_from_Quote_Line_Item__c=&apos;QTC&apos;, 
OR( NokiaCPQ_Custom_Bid__c , 
ISBLANK(NokiaCPQ_Floor_Price__c) , 
ISNULL(NokiaCPQ_Floor_Price__c) ,
NokiaCPQ_ExtendedPrice_CNP__c  &lt;  ( NokiaCPQ_Floor_Price__c  *  Apttus_Config2__ExtendedQuantity__c  )  )  )</formula>
        <inlineHelpText>Flag indicating Approval requried for Line item</inlineHelpText>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Approval_Reqd_QTC_NCQ__c</fullName>
        <description>Indicates if line level approval is required for QTC NCQ type of quote</description>
        <formula>AND(CPQ_IsNCQ__c , 
OR(ISBLANK(NokiaCPQ_Floor_Price__c) , 
ISNULL(NokiaCPQ_Floor_Price__c) ,
Apttus_Config2__NetPrice__c   &lt;  ( NokiaCPQ_Floor_Price__c  *   Apttus_Config2__Quantity__c   )  )  )</formula>
        <inlineHelpText>Indicates if line level approval is required for QTC NCQ type of quote</inlineHelpText>
        <label>Approval Required (QTC NCQ)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Approval_Required_CQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required (QTC CQ)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Approvals_Page__c</fullName>
        <formula>HYPERLINK($Label.CPQ_Approval_URL&amp; Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__c,&quot;My Approvals&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approvals Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Budget_Hours_calc__c</fullName>
        <description>Net price/ Budget hours. Used on QTC NCQ template for Services Price Detail Sheet</description>
        <formula>If (NOT(ISNULL(CPQ_Budget_Hrs__c)), Apttus_Config2__NetPrice__c / CPQ_Budget_Hrs__c,NULL)</formula>
        <inlineHelpText>Net price/ Budget hours. Used on QTC NCQ template for Services Price Detail Sheet</inlineHelpText>
        <label>Budget Hours (calc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Budget_Hrs__c</fullName>
        <description>Used in Surround CPQ/QTC output templates</description>
        <inlineHelpText>Used in Surround CPQ/QTC output templates</inlineHelpText>
        <label>Budget Hrs</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Conditional_Price_Code__c</fullName>
        <description>Reference to the Rule code for conditional price from PLI</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the Rule code for conditional price from PLI</inlineHelpText>
        <label>Conditional Price Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Conditional_Price_Deprecated_Code__c</fullName>
        <description>Reference to the Rule code for conditional price from PLI</description>
        <formula>Apttus_Config2__PriceListItemId__r.CPQ_Conditional_Price_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to the Rule code for conditional price from PLI</inlineHelpText>
        <label>Conditional Price Code(Deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Contracted_Price__c</fullName>
        <description>Stores the extended price from contractual price list items</description>
        <label>Contracted Price Ext.</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Contractual_Discounts_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Autoselected once discount pricing is done</description>
        <label>Contractual Discounts Applied?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Contractual_Discounts__c</fullName>
        <description>stores the various contractual discounts applicable for the line item separated by &apos;;&apos;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Discounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Contractual_Price_Condition__c</fullName>
        <description>Selected by the sales rep at line item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Selected by the sales rep at line item</inlineHelpText>
        <label>Condition</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Customer_Item_Code__c</fullName>
        <description>Reference to Customer Item Code. Populated via PCB from custom object</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to Customer Item Code. Populated via PCB from custom object</inlineHelpText>
        <label>Customer Item Code</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Customer_Item_XREF__c</fullName>
        <description>Reference to Customer Item XREF for verizon. Populated via PCB from product record</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to Customer Item XREF for verizon. Populated via PCB from product record</inlineHelpText>
        <label>Customer Item XREF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Description__c</fullName>
        <description>Used in Surround CPQ/QTC output templates</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used in Surround CPQ/QTC output templates</inlineHelpText>
        <label>Description (QTC NCQ)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Discount_Type__c</fullName>
        <description>Populated via PCB. Reference to the discount type from CCD object</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated via PCB. Reference to the discount type from CCD object</inlineHelpText>
        <label>Discount Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Discount_Value__c</fullName>
        <description>Populated via PCB. Reference to the discount value from CCD object</description>
        <inlineHelpText>Populated via PCB. Reference to the discount value from CCD object</inlineHelpText>
        <label>Discount Value</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Discounted_Price__c</fullName>
        <description>Stores the price after applying discounts like ICDs&amp;QLDs</description>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Duration_days__c</fullName>
        <description>Budget hours (calc) / 8. Used on QTC NCQ template for Services Price Detail Sheet</description>
        <formula>CPQ_Budget_Hours_calc__c /8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Budget hours (calc) / 8. Used on QTC NCQ template for Services Price Detail Sheet</inlineHelpText>
        <label>Duration (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Equipment__c</fullName>
        <description>Reference to Equipment for verizon. Populated via PCB from product record</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to Equipment for verizon. Populated via PCB from product record</inlineHelpText>
        <label>Equipment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Group_Adjustment_Amount__c</fullName>
        <label>Group Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Group_Adjustment_Type__c</fullName>
        <label>Group Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price Override</fullName>
                </value>
                <value>
                    <fullName>% Discount off Floor</fullName>
                    <isActive>false</isActive>
                    <label>% Discount off Floor</label>
                </value>
                <value>
                    <fullName>% Discount off List</fullName>
                    <isActive>false</isActive>
                    <label>% Discount off List</label>
                </value>
                <value>
                    <fullName>% Uplift off Floor</fullName>
                    <isActive>false</isActive>
                    <label>% Uplift off Floor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQ_Group_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Group Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Group_Unit_Override_Price__c</fullName>
        <label>Group Unit Override Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_ILD_Entry__c</fullName>
        <description>Stores the applicable ILDs IDs</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Stores the applicable ILDs IDs</inlineHelpText>
        <label>ILD Entry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_IsCQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated via PCB as the value of IsNCQ? from product configuration record</description>
        <inlineHelpText>Populated via PCB as the value of IsNCQ? from product configuration record</inlineHelpText>
        <label>IsCQ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_IsNCQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated via PCB as the value of IsNCQ? from product configuration record</description>
        <inlineHelpText>Populated via PCB as the value of IsNCQ? from product configuration record</inlineHelpText>
        <label>IsNCQ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Market_Model__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flexible Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_NPT_SI_TYPE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CPQ_NPT_SI_TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_NPT_S_I_Type__c</fullName>
        <formula>Apttus_Config2__OptionId__r.CPQ_NPT_SI_TYPE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPT-S.I Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Net_Price_Inc_Trans__c</fullName>
        <description>Calculated as Net Price + Transport Price</description>
        <formula>IF(TEXT(Apttus_Config2__LineType__c) = &apos;Option&apos; , null, IF(CPQ_Price_Class__c = &apos;Transportation&apos;,Apttus_Config2__BasePriceOverride__c, Apttus_Config2__NetPrice__c + CPQ_Transport_Price__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as Net Price + Transport Price</inlineHelpText>
        <label>Net Price (Incl Transport)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Network_Activity__c</fullName>
        <description>Used in Surround CPQ/QTC output templates</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used in Surround CPQ/QTC output templates</inlineHelpText>
        <label>Network Activity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Normalization_Adjustment__c</fullName>
        <label>Normalization Adjustment</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Original_Proposed_Price__c</fullName>
        <description>Stores the original value of the proposed price from BOM upload</description>
        <inlineHelpText>Stores the original value of the proposed price from BOM upload</inlineHelpText>
        <label>Original Proposed Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Class__c</fullName>
        <description>Reference to Price Class from product record. Populated via PCB</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to Price Class from product record. Populated via PCB</inlineHelpText>
        <label>Price Class</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Product_Description__c</fullName>
        <description>Reference to the custom service description (name) as provided by the sales rep for Surround for Service products</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the custom service description (name) as provided by the sales rep for Surround for Service products</inlineHelpText>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_QLD_ICD_Entry__c</fullName>
        <description>Stores applied QLDs and ICDs entry IDs</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Stores applied QLDs and ICDs entry IDs</inlineHelpText>
        <label>QLD ICD Entry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Rollup_Group_Num__c</fullName>
        <description>Entered by sales rep to group multiple service lines together</description>
        <inlineHelpText>Entered by sales rep to group multiple service lines together</inlineHelpText>
        <label>RollUp Group Num</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Rollup_Group_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Entered by sales rep to denote the parent of the service rollup group</description>
        <inlineHelpText>Entered by sales rep to denote the parent of the service rollup group</inlineHelpText>
        <label>Rollup Group Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Adjust_Type_Class__c</fullName>
        <description>Reference to the adjusttype from the SSF BOM upload for Surround</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the adjusttype from the SSF BOM upload for Surround</inlineHelpText>
        <label>SSF Adjust Type Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Billing_Rule_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSF Billing Rule Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Billing_Rule_Description__c</fullName>
        <description>Reference to the billing Description corresponding to the SSF billing rule code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the billing Description corresponding to the SSF billing rule code</inlineHelpText>
        <label>SSF Billing Rule Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Billing_Rule_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Selected by sales rep and refers to the ID of the billing rule code</description>
        <inlineHelpText>Selected by sales rep and refers to the ID of the billing rule code</inlineHelpText>
        <label>SSF Billing Rule ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CPQ_SSFBillingRuleMaster__c.CPQ_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CPQ_SSFBillingRuleMaster__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Discount_Percent__c</fullName>
        <description>Reference to the unitdisc (recurring) or onetimedisc (onetime) from the SSF BOM upload for Surround</description>
        <inlineHelpText>Reference to the unitdisc (recurring) or onetimedisc (onetime) from the SSF BOM upload for Surround</inlineHelpText>
        <label>SSF Discount %</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Discounted_Base_Price__c</fullName>
        <description>Reference to the tss_discUnitRate (recurring) or disconetimecharge (onetime) from the SSF BOM upload for Surround</description>
        <inlineHelpText>Reference to the tss_discUnitRate (recurring) or disconetimecharge (onetime) from the SSF BOM upload for Surround</inlineHelpText>
        <label>SSF Discounted Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Group_ID__c</fullName>
        <description>Reference to the group ID from the SSF BOM upload for Surround</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the group ID from the SSF BOM upload for Surround</inlineHelpText>
        <label>SSF Group ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Permission__c</fullName>
        <description>Reference to SSF Permitted from product record. Populated via PCB</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to SSF Permitted from product record. Populated via PCB</inlineHelpText>
        <label>SSF Permission</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Price_Class__c</fullName>
        <description>Reference to the priceclass from the SSF BOM upload for Surround</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the priceclass from the SSF BOM upload for Surround</inlineHelpText>
        <label>SSF Price Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Product_Manufacturer__c</fullName>
        <description>Reference to the tss_productManufacturer from the SSF BOM upload for Surround</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the tss_productManufacturer from the SSF BOM upload for Surround</inlineHelpText>
        <label>SSF Product Manufacturer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>